# taxi_license_check

./: .gitignore  README.md  pyproject.toml
bot/: __main__.py  config.py  text.py
bot/handlers/: __init__.py  help.py  mosreglicense.py  mosrulicense.py  start.py
bot/services/: get_mosreg_license.py  get_mosru_license.py
bot/utils/: captcha_solver.py  check_input_data.py  display_mosreg_license_data.py  display_mosru_license_data.py  reduce_to_string.py
